--- a/_includes/jumbotrons/cinemadrape-windows.html
+++ b/_includes/jumbotrons/cinemadrape-windows.html
@@ -1,13 +1,13 @@
 <!-- CinemaDrape for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="{{site.baseurl}}/cinemadrape/windows/">
-            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/cinemadrape/cinemadrape-jumbotron-shot.jpg" alt="CinemaDrape Screenshot" />
+        <a href="{{ site.github.url }}/cinemadrape/windows/">
+            <img class="img-fluid jumbotron-shot" src="{{ site.github.url }}/img/apps/cinemadrape/cinemadrape-jumbotron-shot.jpg" alt="CinemaDrape Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/cinemadrape/windows/" class="appname">CinemaDrape.</a> Minimize distractions and focus on your task by blacking out other screen areas.</h1>
+            <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/cinemadrape/windows/" class="appname">CinemaDrape.</a> Minimize distractions and focus on your task by blacking out other screen areas.</h1>
             <p class="jumbotron-quote"><q>CinemaDrape strategically covers parts of your desktop</q> (Washington Post)</p>
-            <p><a class="btn btn-primary" href="{{site.baseurl}}/cinemadrape/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p><a class="btn btn-primary" href="{{ site.github.url }}/cinemadrape/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
     </div>
