--- a/_includes/jumbotrons/htmtied-windows.html
+++ b/_includes/jumbotrons/htmtied-windows.html
@@ -1,13 +1,13 @@
 <!-- HTMtied for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="{{site.baseurl}}/htmtied/windows/">
-            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/htmtied/htmtied-jumbotron-shot.jpg" alt="HTMtied Screenshot" />
+        <a href="{{ site.github.url }}/htmtied/windows/">
+            <img class="img-fluid jumbotron-shot" src="{{ site.github.url }}/img/apps/htmtied/htmtied-jumbotron-shot.jpg" alt="HTMtied Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/htmtied/windows/" class="appname">HTMtied.</a> Save your Internet bookmarks as tiny portable HTML link files, and use them anywhere.</h1>
+            <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/htmtied/windows/" class="appname">HTMtied.</a> Save your Internet bookmarks as tiny portable HTML link files, and use them anywhere.</h1>
             <p class="jumbotron-quote"><q>A great implementation of such a simple yet brilliant idea.</q> (FreewareGenius)</p>
-            <p><a class="btn btn-primary" href="{{site.baseurl}}/htmtied/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p><a class="btn btn-primary" href="{{ site.github.url }}/htmtied/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
     </div>
