--- a/_includes/jumbotrons/injuredpixels-android.html
+++ b/_includes/jumbotrons/injuredpixels-android.html
@@ -1,19 +1,19 @@
 <!-- InjuredPixels for Android Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="{{site.baseurl}}/injuredpixels/android/">
+        <a href="{{ site.github.url }}/injuredpixels/android/">
             <img class="img-fluid jumbotron-shot"
-                src="{{site.baseurl}}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png"
-                srcset="{{site.baseurl}}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png 1x,
-                {{site.baseurl}}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-2x.png 2x,
-                {{site.baseurl}}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-3x.png 3x"
+                src="{{ site.github.url }}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png"
+                srcset="{{ site.github.url }}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png 1x,
+                {{ site.github.url }}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-2x.png 2x,
+                {{ site.github.url }}/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-3x.png 3x"
                 alt="InjuredPixels for Android Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/injuredpixels/android/" class="appname">InjuredPixels.</a> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
+            <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/injuredpixels/android/" class="appname">InjuredPixels.</a> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
             <p class="jumbotron-quote"><q>The capable InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
-            <p><a class="btn btn-primary" href="{{site.baseurl}}/injuredpixels/android/download/" role="button">Get it Free for Android</a></p>
-            <p>Also available for <a class="link" href="{{site.baseurl}}/injuredpixels/windows/">Windows</a></p>
+            <p><a class="btn btn-primary" href="{{ site.github.url }}/injuredpixels/android/download/" role="button">Get it Free for Android</a></p>
+            <p>Also available for <a class="link" href="{{ site.github.url }}/injuredpixels/windows/">Windows</a></p>
         </div>
     </div>
 </div>
