--- a/_includes/jumbotrons/whatsmyco-web.html
+++ b/_includes/jumbotrons/whatsmyco-web.html
@@ -1,13 +1,13 @@
 <!-- WhatsMyCo Web Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="{{site.baseurl}}/whatsmyco/web/">
-            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/whatsmyco/web/whatsmyco-jumbotron-shot.png" alt="WhatsMyCo Screenshot" />
+        <a href="{{ site.github.url }}/whatsmyco/web/">
+            <img class="img-fluid jumbotron-shot" src="{{ site.github.url }}/img/apps/whatsmyco/web/whatsmyco-jumbotron-shot.png" alt="WhatsMyCo Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/whatsmyco/web/" class="appname">WhatsMyCo.</a>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
+            <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/whatsmyco/web/" class="appname">WhatsMyCo.</a>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
             <p class="jumbotron-quote"><q>WhatsMyCo is a fun and pretty interesting concept.</q> (I Love Free Software)</p>
-            <p><a class="btn btn-primary" href="{{site.baseurl}}/whatsmyco/web/download/" role="button">Run In Your Browser</a></p>
+            <p><a class="btn btn-primary" href="{{ site.github.url }}/whatsmyco/web/download/" role="button">Run In Your Browser</a></p>
             <p></p>
         </div>
     </div>
