--- a/_includes/stripes/featured/injuredpixels-android.html
+++ b/_includes/stripes/featured/injuredpixels-android.html
@@ -1,16 +1,16 @@
 <!-- InjuredPixels for Android Featured Logos -->
 {% capture thecontent %}
     <a href="http://www.scroll.com.tr/olu-piksel-bulma-tespit-etme-programi/" target="_blank">
-        <img class="featured-logo" height="35" src="{{site.baseurl}}/img/third/reviews/s/scroll-com-tr/scroll-com-tr-white.png" alt="Scroll" />
+        <img class="featured-logo" height="35" src="{{ site.github.url }}/img/third/reviews/s/scroll-com-tr/scroll-com-tr-white.png" alt="Scroll" />
     </a>
     <a href="http://www.softpedia.com/get/System/System-Miscellaneous/InjuredPixels.shtml" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
     </a>
     <a href="http://www.01net.com/telecharger/windows/Utilitaire/optimiseurs_et_tests/fiches/102632.html" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/0/01net/01net-white.png" alt="01net" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/0/01net/01net-white.png" alt="01net" />
     </a>
     <a href="http://www.rockybytes.com/injuredpixels" target="_blank">
-        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
