--- a/_includes/stripes/featured/thumbico-windows.html
+++ b/_includes/stripes/featured/thumbico-windows.html
@@ -1,16 +1,16 @@
 <!-- Thumbico for Windows Featured Logos -->
 {% capture thecontent %}
     <a href="http://www.addictivetips.com/windows-tips/thumbico-lets-you-view-extract-icons-of-files-videos-applications/" target="_blank">
-        <img class="featured-logo" height="35" src="{{site.baseurl}}/img/third/reviews/a/addictivetips/addictivetips-white.png" alt="AddictiveTips" />
+        <img class="featured-logo" height="35" src="{{ site.github.url }}/img/third/reviews/a/addictivetips/addictivetips-white.png" alt="AddictiveTips" />
     </a>
     <a href="http://www.softpedia.com/reviews/windows/Thumbico-Review-181397.shtml" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
     </a>
     <a href="http://allmyapps.com/windows/thumbico" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/a/allmyapps/allmyapps-white.png" alt="Allmyapps" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/a/allmyapps/allmyapps-white.png" alt="Allmyapps" />
     </a>
     <a href="http://www.rockybytes.com/thumbico" target="_blank">
-        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
