--- a/_includes/jumbotrons/colortypist-windows.html
+++ b/_includes/jumbotrons/colortypist-windows.html
@@ -1,13 +1,13 @@
 <!-- Colortypist for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="{{site.baseurl}}/colortypist/windows/">
-            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/colortypist/colortypist-jumbotron-shot.png" alt="Colortypist Screenshot" />
+        <a href="{{ site.github.url }}/colortypist/windows/">
+            <img class="img-fluid jumbotron-shot" src="{{ site.github.url }}/img/apps/colortypist/colortypist-jumbotron-shot.png" alt="Colortypist Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/colortypist/windows/" class="appname">Colortypist.</a> Type in a color name or code, and see it fill your screen in real-time, while you type.</h1>
+            <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/colortypist/windows/" class="appname">Colortypist.</a> Type in a color name or code, and see it fill your screen in real-time, while you type.</h1>
             <p class="jumbotron-quote"><q>A handy free color picker and viewer with plenty of useful features.</q> (PC &amp; Tech Authority)</p>
-            <p><a class="btn btn-primary" href="{{site.baseurl}}/colortypist/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p><a class="btn btn-primary" href="{{ site.github.url }}/colortypist/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
     </div>
