--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -1,13 +1,13 @@
 <!-- ColorVeil for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="{{site.baseurl}}/colorveil/windows/">
-            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
+        <a href="{{ site.github.url }}/colorveil/windows/">
+            <img class="img-fluid jumbotron-shot" src="{{ site.github.url }}/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/colorveil/windows/" class="appname">ColorVeil.</a> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
+            <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/colorveil/windows/" class="appname">ColorVeil.</a> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
             <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
-            <p><a class="btn btn-primary" href="{{site.baseurl}}/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p><a class="btn btn-primary" href="{{ site.github.url }}/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
     </div>
