--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -2,9 +2,9 @@
     <div class="container">
         <a href="http://www.east-tec.com" target="_blank">
             <img class="img-fluid jumbotron-shot"
-                src="{{site.baseurl}}/img/third/east-tec/east-tec-jumbotron-shot.png"
-                srcset="{{site.baseurl}}/img/third/east-tec/east-tec-jumbotron-shot.png 1x,
-                        {{site.baseurl}}/img/third/east-tec/east-tec-jumbotron-shot-2x.png 2x"
+                src="{{ site.github.url }}/img/third/east-tec/east-tec-jumbotron-shot.png"
+                srcset="{{ site.github.url }}/img/third/east-tec/east-tec-jumbotron-shot.png 1x,
+                        {{ site.github.url }}/img/third/east-tec/east-tec-jumbotron-shot-2x.png 2x"
                 alt="East-Tec Screenshot" />
         </a>
         <div class="jumbotron-content">
