--- a/_includes/stripes/featured/cinemadrape-windows.html
+++ b/_includes/stripes/featured/cinemadrape-windows.html
@@ -1,16 +1,16 @@
 <!-- CinemaDrape for Windows Featured Logos -->
 {% capture thecontent %}
     <a href="http://www.addictivetips.com/windows-tips/cinemadrape-lets-you-focus-and-get-things-done/" target="_blank">
-        <img class="featured-logo" height="35" src="{{site.baseurl}}/img/third/reviews/a/addictivetips/addictivetips-white.png" alt="AddictiveTips" />
+        <img class="featured-logo" height="35" src="{{ site.github.url }}/img/third/reviews/a/addictivetips/addictivetips-white.png" alt="AddictiveTips" />
     </a>
     <a href="http://lifehacker.com/5465228/cinemadrape-creates-a-distraction-free-zone-for-any-application" target="_blank">
-        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/l/lifehacker/lifehacker-white.png" alt="Lifehacker" />
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/l/lifehacker/lifehacker-white.png" alt="Lifehacker" />
     </a>
     <a href="http://revision3.com/tzdaily/2010-07-01cinedrape" target="_blank">
-        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/r/revision3/revision3-white.svg" alt="Revision3" />
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/r/revision3/revision3-white.svg" alt="Revision3" />
     </a>
     <a href="https://gb.zinio.com/www/browse/issue.jsp?skuId=416124197#/" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/w/webuser/webuser-white.png" alt="Web User" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/w/webuser/webuser-white.png" alt="Web User" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
