--- a/_includes/stripes/featured/pixelhealer-windows.html
+++ b/_includes/stripes/featured/pixelhealer-windows.html
@@ -1,16 +1,16 @@
 <!-- PixelHealer for Windows Featured Logos -->
 {% capture thecontent %}
     <a href="http://www.chip.de/downloads/PixelHealer-Portable_88736206.html" target="_blank">
-        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
     </a>
     <a href="http://www.softpedia.com/get/System/System-Info/PixelHealer.shtml" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
     </a>
     <a href="http://www.01net.com/telecharger/windows/Utilitaire/optimiseurs_et_tests/fiches/121203.html" target="_blank">
-        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/0/01net/01net-white.png" alt="01net" />
+        <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/0/01net/01net-white.png" alt="01net" />
     </a>
     <a href="http://www.rockybytes.com/pixelhealer" target="_blank">
-        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
