--- a/_includes/templates/app-secondary-menu.html
+++ b/_includes/templates/app-secondary-menu.html
@@ -2,11 +2,11 @@
 <section class="stripe-secondary-menu">
     <div class="container">
         <nav class="nav nav-inline secondary-menu">
-            <a class="nav-link{% if page.active == 'overview' %} active{% endif %}" href="{{site.baseurl}}{{page.appurl}}">Overview</a>
-            <a class="nav-link{% if page.active == 'help' %} active{% endif %}" href="{{site.baseurl}}{{page.appurl}}help/">Help</a>
-            <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="{{site.baseurl}}{{page.appurl}}reviews/">Reviews</a>
-            <a class="nav-link{% if page.active == 'history' %} active{% endif %}" href="{{site.baseurl}}{{page.appurl}}history/">History</a>
-            <a class="nav-link{% if page.active == 'download' %} active{% endif %}" href="{{site.baseurl}}{{page.appurl}}download/">Download</a>
+            <a class="nav-link{% if page.active == 'overview' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}">Overview</a>
+            <a class="nav-link{% if page.active == 'help' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}help/">Help</a>
+            <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}reviews/">Reviews</a>
+            <a class="nav-link{% if page.active == 'history' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}history/">History</a>
+            <a class="nav-link{% if page.active == 'download' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}download/">Download</a>
         </nav>
     </div>
 </section>
