--- a/_includes/various/article-list.html
+++ b/_includes/various/article-list.html
@@ -3,23 +3,23 @@
     <ul class="list-group">
         <li class="list-group-item">
             <span class="label label-default label-pill pull-xs-right">Colortypist</span>
-            <a href="{{site.baseurl}}/articles/color-desktop-wallpapers-fingertips/">Color Desktop Wallpapers At Your Fingertips</a>
+            <a href="{{ site.github.url }}/articles/color-desktop-wallpapers-fingertips/">Color Desktop Wallpapers At Your Fingertips</a>
         </li>
         <li class="list-group-item">
             <span class="label label-default label-pill pull-xs-right">PixelHealer</span>
-            <a href="{{site.baseurl}}/articles/diy-pixel-fix/">DIY Pixel Fix: Fix Dead, Stuck Or Hot Pixels Hassle Free</a>
+            <a href="{{ site.github.url }}/articles/diy-pixel-fix/">DIY Pixel Fix: Fix Dead, Stuck Or Hot Pixels Hassle Free</a>
         </li>
         <li class="list-group-item">
             <span class="label label-default label-pill pull-xs-right">HTMtied</span>
-            <a href="{{site.baseurl}}/articles/freedom-favorites-portable-bookmarks/">Freedom-Tied Favorites: How To Create Portable Bookmarks?</a>
+            <a href="{{ site.github.url }}/articles/freedom-favorites-portable-bookmarks/">Freedom-Tied Favorites: How To Create Portable Bookmarks?</a>
         </li>
         <li class="list-group-item">
             <span class="label label-default label-pill pull-xs-right">CinemaDrape</span>
-            <a href="{{site.baseurl}}/articles/instant-screen-area-focus/">Instant Screen Area Focus With CinemaDrape</a>
+            <a href="{{ site.github.url }}/articles/instant-screen-area-focus/">Instant Screen Area Focus With CinemaDrape</a>
         </li>
         <li class="list-group-item">
             <span class="label label-default label-pill pull-xs-right">InjuredPixels</span>
-            <a href="{{site.baseurl}}/articles/pixel-test-monitor-trouble-spots/">Pixel Test Your Monitor For Its Trouble Spots</a>
+            <a href="{{ site.github.url }}/articles/pixel-test-monitor-trouble-spots/">Pixel Test Your Monitor For Its Trouble Spots</a>
         </li>
     </ul>
 {% endcapture %}
