Improve the jumbotron of the download pages

--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -8,7 +8,7 @@
                 alt="East-Tec Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="http://www.east-tec.com" target="_blank" class="appname">east-tec Eraser</a> is our main sponsor and supporter, and the reason all Aurelitec apps are free.</h1>
+            <h1 class="jumbotron-heading"><strong class="appname">{{ page.appname }}</strong> is completely free because it's supported by East-Tec and east-tec Eraser!</h1>
             <p class="jumbotron-quote"><q>east-tec Eraser is the perfect program to cover your tracks.</q> (PC Pro)</p>
             <p><a class="btn btn-primary" href="http://www.east-tec.com" target="_blank" role="button">Free Download</a></p>
             <p></p>
