Update footer social links and icons, add new reviews and logos

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -23,9 +23,9 @@
             <p class="copyright">Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="{{ site.github.url }}/about/privacy/">Privacy Policy</a></p>
 
             <nav class="nav nav-inline">
+                <a class="nav-link social social-wordpress" href="https://aurelitec.wordpress.com/" target="_blank"><img class="social-icon" src="{{ site.github.url }}/img/third/social/wordpress.svg" alt="WordPress" title="WordPress" /></a>
                 <a class="nav-link social social-twitter" href="https://twitter.com/aurelitec" target="_blank"><img class="social-icon" src="{{ site.github.url }}/img/third/social/twitter.svg" alt="Twitter" title="Twitter" /></a>
-                <a class="nav-link social social-github" href="https://github.com/aurelitec/" target="_blank"><img class="social-icon" src="{{ site.github.url }}/img/third/social/github.svg" alt="GitHub" title="GitHub" /></a>
-                <a class="nav-link social social-pocket" href="https://getpocket.com/@aurelitec" target="_blank"><img class="social-icon" src="{{ site.github.url }}/img/third/social/pocket.svg" alt="Pocket" title="Pocket" /></a>
+                <a class="nav-link social social-tumblr" href="http://aureliteclinklog.tumblr.com/" target="_blank"><img class="social-icon" src="{{ site.github.url }}/img/third/social/tumblr.svg" alt="Tumblr" title="Tumblr" /></a>
             </nav>
         </div>
     </footer> <!-- .site-footer -->
