--- a/_includes/stripes/featured/home.html
+++ b/_includes/stripes/featured/home.html
@@ -15,5 +15,18 @@
     <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
         <img class="featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
     </a>
+
+    <a href="https://ca.finance.yahoo.com/news/dead-pixel-down-tricks-might-191544906.html" target="_blank">
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/y/yahoo/yahoo-finance-white.png" alt="Yahoo! Finance" />
+    </a>
+    <a href="http://www.chip.de/downloads/PixelHealer-Portable_88736206.html" target="_blank">
+        <img class="featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/c/chip/chip-white.svg" alt="CHIP" />
+    </a>
+    <a href="http://exame.abril.com.br/blogs/aplicativos/windows/htmtied-gerencia-bookmark-a-partir-da-area-de-trabalho/" target="_blank">
+        <img class="featured-logo" height="25" src="{{ site.github.url }}/img/third/reviews/e/exame/exame-white.svg" alt="Exame" />
+    </a>
+    <a href="http://verytech.smartworld.it/come-visualizzare-pagine-web-offline-114204.html" target="_blank">
+        <img class="featured-logo" height="35" src="{{ site.github.url }}/img/third/reviews/s/smartworld-it/smartworld-it-white.svg" alt="SmartWorld" />
+    </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
