Switch to Bootstrap v4.0.0-alpha.5

--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href='https://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Dosis:200" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
     <meta name="theme-color" content="#1BADEA">
 
@@ -29,7 +29,7 @@
                     <img class="header-logo" alt="Aurelitec" src="{{ site.github.url }}/img/theme/branding/aurelitec-logo-header.png" />
                 </a>
 
-                <button class="navbar-toggler hidden-md-up pull-xs-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
+                <button class="navbar-toggler hidden-md-up float-xs-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
                 <div class="clearfix hidden-md-up"></div>
 
                 <div class="navbar-panel collapse navbar-toggleable-sm" id="collapsingNavbar">
