--- a/_includes/templates/contentsection.html
+++ b/_includes/templates/contentsection.html
@@ -1,4 +1,4 @@
-<section class="row m-b-2">
+<section class="row mb-2">
     <div class="col-md-3 col-lg-2">
         <h2 class="section-heading">{{include.heading}}</h2>
     </div>
