--- a/_includes/various/article-list.html
+++ b/_includes/various/article-list.html
@@ -2,23 +2,23 @@
     <p>You can learn more about the free Aurelitec apps by reading these articles:</p>
     <ul class="list-group">
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">Colortypist</span>
+            <span class="tag tag-default tag-pill float-xs-right">Colortypist</span>
             <a href="{{ site.github.url }}/articles/color-desktop-wallpapers-fingertips/">Color Desktop Wallpapers At Your Fingertips</a>
         </li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">PixelHealer</span>
+            <span class="tag tag-default tag-pill float-xs-right">PixelHealer</span>
             <a href="{{ site.github.url }}/articles/diy-pixel-fix/">DIY Pixel Fix: Fix Dead, Stuck Or Hot Pixels Hassle Free</a>
         </li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">HTMtied</span>
+            <span class="tag tag-default tag-pill float-xs-right">HTMtied</span>
             <a href="{{ site.github.url }}/articles/freedom-favorites-portable-bookmarks/">Freedom-Tied Favorites: How To Create Portable Bookmarks?</a>
         </li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">CinemaDrape</span>
+            <span class="tag tag-default tag-pill float-xs-right">CinemaDrape</span>
             <a href="{{ site.github.url }}/articles/instant-screen-area-focus/">Instant Screen Area Focus With CinemaDrape</a>
         </li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">InjuredPixels</span>
+            <span class="tag tag-default tag-pill float-xs-right">InjuredPixels</span>
             <a href="{{ site.github.url }}/articles/pixel-test-monitor-trouble-spots/">Pixel Test Your Monitor For Its Trouble Spots</a>
         </li>
     </ul>
