Improve the ColorVeil Middlewich High School testimonial

--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -190,8 +190,11 @@ p.jumbotron-heading {
 
 /* Jumbotron content link */
 
-.jumbotron a.link {
+.jumbotron a {
     color: #fff;
+}
+
+.jumbotron a.link {
     border-bottom: 1px dotted #fff;
 }
 
