--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -6,7 +6,7 @@
         </a>
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="{{ site.github.url }}/colorveil/windows/" class="appname">ColorVeil.</a>  Color filters over your screen. Reduce eye strain, help with Dyslexia and Visual Stress.</h1>
-            <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
+            <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (<a href="/colorveil/windows/testimonials/middlewichhigh/">Middlewich High School, UK</a>)</p>
             <p><a class="btn btn-primary" href="{{ site.github.url }}/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
