--- a/_includes/css/section.css
+++ b/_includes/css/section.css
@@ -28,6 +28,15 @@
     margin: 0 2rem 1.25rem 2rem;
 }
 
+/*
+ * Badge Stripe
+ */
+
+ .badge-stripe {
+     margin-bottom: 1.5rem;
+     text-align: center;
+ }
+
 
 /* ==========================================================================
    App Pages
