Update content structure and layout of the licenses pages; responsive fixes

--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-6 aur-jumbotron-text-container">
                 <h1 class="aur-jumbotron-heading">
-                    <a href="{{ site.github.url }}/injuredpixels/windows/" class="aur-appname">{{ page.appname }}</a>
+                    <span class="aur-appname">{{ page.appname }}</span>
                     is free because it's supported by east-tec Eraser! Protect your privacy, cover your tracks!
                 </h1>
                 <p><a class="btn btn-primary" href="http://www.east-tec.com/eraser/download/" target="_blank" role="button">Free Download</a></p>
