--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -46,24 +46,24 @@ a:focus, a:hover {
 }
 
 .navbar-toggler-right {
-    top: 0.25rem;
+    top: 0.15rem;
 }
 
 @media (min-width: 576px) {
     .navbar-toggler-right {
-        top: 0.55rem;
+        top: 0.35rem;
     }
 }
 
 /* Brand */
 
 .navbar-brand img {
-    height: 40px;
+    height: 35px;
 }
 
 @media (min-width: 576px) {
     .navbar-brand img {
-        height: 50px;
+        height: 45px;
     }
 }
 
@@ -82,8 +82,20 @@ a:focus, a:hover {
 .navbar-nav .nav-link {
     color: #fff!important;
     font-weight: bold;
-    padding-left: 2rem!important;
-    padding-right: 2rem!important;
+}
+
+@media (min-width: 768px) {
+    .navbar-nav .nav-link {
+        padding-left: 1rem!important;
+        padding-right: 1rem!important;
+    }
+}
+
+@media (min-width: 992px) {
+    .navbar-nav .nav-link {
+        padding-left: 2rem!important;
+        padding-right: 2rem!important;
+    }
 }
 
 .navbar-nav .nav-link:focus, .navbar-nav .nav-link:hover {
@@ -112,10 +124,10 @@ a:focus, a:hover {
 .aur-app-jumbotron {
     margin-bottom: 0;
     padding-bottom: 0;
-    padding-top: 3rem;
+    padding-top: 2rem;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 992px) {
     .aur-app-jumbotron {
         padding-top: 4rem;
     }
@@ -138,7 +150,7 @@ a:focus, a:hover {
 
 @media (max-width: 991px) {
     .aur-jumbotron-text-container {
-        margin-bottom: 2rem;
+        margin-bottom: 1.5rem;
     }
 }
 
@@ -202,17 +214,17 @@ p.aur-jumbotron-heading {
 
 /* Jumbotron screenshot */
 
-/*.aur-jumbotron-shot-container {
-    max-height: 18rem;
+.aur-jumbotron-shot-container {
+    max-height: 17.5rem;
     overflow: hidden;
-}*/
+}
 
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
     .aur-jumbotron-shot-container {
         max-height: 17.5rem;
         overflow: hidden;
     }
-}
+}*/
 
 .aur-jumbotron-shot {
     border-left: 2px solid #fff;
@@ -255,6 +267,9 @@ p.aur-jumbotron-heading {
     font-size: 1.15rem;
     font-weight: bold;
     margin-bottom: 1.15rem;
-    margin-left: 1rem;
     padding-bottom: .65rem;
+}
+
+.aur-site-footer nav {
+    margin-left: -1rem;
 }
