--- a/_includes/various/licenses/apache.html
+++ b/_includes/various/licenses/apache.html
@@ -1,3 +1,4 @@
+<div class="aur-content-group">
 <pre id="license-text">
                      Apache License
                 Version 2.0, January 2004
@@ -201,3 +202,4 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 </pre>
+</div>
