--- a/_includes/templates/app-secondary-menu.html
+++ b/_includes/templates/app-secondary-menu.html
@@ -2,20 +2,20 @@
 <section class="aur-secondary-menu-stripe">
     <div class="container">
         <nav class="aur-secondary-menu" >
-            <div class="row no-gutters">
-                <div class="col-6 col-sm">
+            <div class="row no-gutters justify-content-center">
+                <div class="col-4 col-sm">
                     <a class="nav-link{% if page.active == 'overview' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}">Overview</a>
                 </div>
-                <div class="col-6 col-sm">
+                <div class="col-4 col-sm">
                     <a class="nav-link{% if page.active == 'help' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}help/">Help</a>
                 </div>
-                <div class="col-6 col-sm">
+                <div class="col-4 col-sm">
                     <a class="nav-link{% if page.active == 'reviews' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}reviews/">Reviews</a>
                 </div>
-                <div class="col-6 col-sm">
+                <div class="col-4 col-sm">
                     <a class="nav-link{% if page.active == 'history' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}history/">History</a>
                 </div>
-                <div class="col-sm">
+                <div class="col-4 col-sm">
                     <a class="nav-link{% if page.active == 'download' %} active{% endif %}" href="{{ site.github.url }}{{page.appurl}}download/">Download</a>
                 </div>
             </div>
