--- a/_includes/stripes/featured/injuredpixels-windows.html
+++ b/_includes/stripes/featured/injuredpixels-windows.html
@@ -6,11 +6,14 @@
     <a href="http://www.scroll.com.tr/olu-piksel-bulma-tespit-etme-programi/" target="_blank">
         <img class="aur-featured-logo" height="35" src="{{ site.github.url }}/img/third/reviews/s/scroll-com-tr/scroll-com-tr-white.png" alt="Scroll" />
     </a>
+    <a href="http://injuredpixels.software.informer.com/" target="_blank">
+        <img class="aur-featured-logo" height="25" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-white.svg" alt="Software Informer" />
+    </a>
     <a href="http://www.softpedia.com/get/System/System-Miscellaneous/InjuredPixels.shtml" target="_blank">
         <img class="aur-featured-logo" height="30" src="{{ site.github.url }}/img/third/reviews/s/softpedia/softpedia-white.png" alt="Softpedia" />
     </a>
-    <a href="http://www.rockybytes.com/injuredpixels" target="_blank">
+    <!-- <a href="http://www.rockybytes.com/injuredpixels" target="_blank">
         <img class="aur-featured-logo" height="40" src="{{ site.github.url }}/img/third/reviews/r/rockybytes/rockybytes-white.png" alt="Rocky Bytes" />
-    </a>
+    </a> -->
 {% endcapture %}
 {% include templates/featured-stripe.html %}
